# ROS_Tutorials

./: README.md
Documents/GitHub/: Comandos Git Tiago
Gazebo Tutorials/building_editor_models/Robot_house/: model.config  model.sdf
Gazebo Tutorials/model_editor_models/my_vehicle/: model.config  model.sdf
Gazebo Tutorials/myrobot/myrobot_description/: CMakeLists.txt  model.config  package.xml
Gazebo Tutorials/myrobot/myrobot_gazebo/: CMakeLists.txt  package.xml
Gazebo Tutorials/velodyne/: velodyne.world  velodyne_base.dae  velodyne_base_new.dae  velodyne_top.dae  velodyne_top_new.dae
Gazebo Tutorials/velodyne_plugin/: CMakeLists.txt  velodyne.world  velodyne_plugin.cc  velodyne_plugin_old.cc
MoveIt Tutorials/panda_moveit_config/: .setup_assistant  package.xml
MoveIt Tutorials/panda_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  panda.srdf
ROS Tutorials/beginner_tutorials/: package.xml
ROS Tutorials/beginner_tutorials/launch/: turtlemimic.launch
TF Tutorials/learning_tf/: frames.gv
TF Tutorials/learning_tf/launch/: start_debug_demo.launch  start_demo.launch
TF Tutorials/r2d2/: CMakeLists.txt  package.xml
TF Tutorials/robot_setup_tf/: CMakeLists.txt  my_robot.urdf  package.xml
TF Tutorials/robot_setup_tf/launch/: my_robot.launch
bagfiles/: 2019-08-22-11-25-51.bag  subset.bag
beginner_tutorials/: CMakeLists.txt
beginner_tutorials/launch/: turtlemimic.launch
catkin_ws/: params.yaml
learning_tf/: CMakeLists.txt  package.xml
learning_tf/nodes/: turtle_tf_listener.py
learning_tf/src/: turtle_tf_listener_debug.cpp
(+2 files in other folders)
